# bazel-web-monorepo

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  package.json
tools/: BUILD.bazel  tsconfig.base.json
tools/jest/: BUILD.bazel  index.bzl  jest-reporter.js  jest.config.js
tools/tsc/: BUILD.bazel  index.bzl
tools/webpack/: BUILD.bazel  index.bzl  tsconfig.webpack.json
